--- a/clover/src/main/resources/application.properties
+++ b/clover/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/clover?serverTimezone=UTC
-spring.datasource.hikari.username=root
+spring.datasource.url=jdbc:mysql://192.168.0.7:3306/clover?serverTimezone=UTC
+spring.datasource.hikari.username=devlaptop
 spring.datasource.hikari.password=eksehfk12!
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.Connection-test-query=SELECT 1
